fixed contact me section overlaping

--- a/css/style.css
+++ b/css/style.css
@@ -201,7 +201,7 @@ img{
     width: 400px;
     text-align: center;
     margin: 0 auto;
-    padding: 3rem 0;
+    padding: 3rem 1rem;
 }
 
 #contact p:last-child {
